@@ -1,10 +1,16 @@
 
+2019-11-21  Ron Norman <rjn@inglenet.com>
+
+	* fbdb.c: Change to ignore sequence of keys when writing
+			to an output SEQUENTIAL INDEXED file that was
+			runtime changed to file type of INDEXED
+
 2019-11-20  Ron Norman <rjn@inglenet.com>
 
 	* common.h,fileio.c,fisam.c: Added flag_set_isam to cob_file
 	        and if set, then ignore sequence of keys when writing
-			to an output SEQUENTIAL INDEXED file
-			This is needed to runtime change file type to INDEXED
+			to an output SEQUENTIAL INDEXED file that was
+			runtime changed to file type of INDEXED
 
 2019-11-20  Ron Norman <rjn@inglenet.com>
 
